[package]
name = "notes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
