[package]
name = "notes_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
chrono = "0.4.41"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
sea-orm = { version = "1.1.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
p256 = { version = "0.13.2", features = ["ecdh"] }
aes-gcm = "0.10.3"
getrandom = "0.3.3"
sha2 = "0.10.8"
bytes = "1.6.0"
futures-util = "0.3.31"
base64 = "0.22.1"
